better devices table display, add function to refresh button

--- a/IoTDeviceManager.angularClient/src/app/app.component.html
+++ b/IoTDeviceManager.angularClient/src/app/app.component.html
@@ -15,7 +15,7 @@
 </style>
 
 <div class="min-h-screen flex flex-col">
-  <div class="flex h-[50px] space-x-2 bg-gray-800 sticky z-[1] items-center">
+  <div class="flex h-[50px] space-x-2 bg-gray-800 sticky items-center">
     <div class="flex ml-[20px] space-x-20 items-center">
       <div class="flex gap-1 items-center">
         <i class="pi pi-home text-white text-xl"></i>
@@ -35,20 +35,20 @@
     <router-outlet></router-outlet>
   </div>
 
-  <footer class="bg-gray-800 text-white pt-4 sticky z-[1]">
+  <footer class="bg-gray-800 text-white pt-4 sticky">
     <div class="container mx-auto flex justify-between items-center">
       <div class="flex items-center space-x-2">
         <span>©{{ year }} IDM | Paavo Karppinen</span>
       </div>
 
       <div class="flex items-center space-x-2">
-        <a href="https://paavokarppinen.azurewebsites.net/" target="_blank" rel="noopener noreferrer">
+        <a href="https://paavokarppinen.azurewebsites.net/" target="_blank" rel="noopener">
           My website
         </a>
       </div>
       
       <div class="flex items-center space-x-2">
-        <a href="https://github.com/paavkar/" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/paavkar/" target="_blank" rel="noopener">
           My GitHub
         </a>
       </div>
