add controller versioning, cosmos db device creation and fetching

--- a/IoTDeviceManager.angularClient/src/app/pages/devices/devices.component.html
+++ b/IoTDeviceManager.angularClient/src/app/pages/devices/devices.component.html
@@ -1,5 +1,5 @@
 <div class="m-4">
-    <span class="text-3xl font-semibold">Your devices</span>
+    <span class="text-3xl font-semibold">My devices</span>
     <p-button class="ml-4 p-2 rounded-md" aria-label="Add a device"
         label="Add a device" (click)="createDeviceVisible = true" />
     
