--- a/IoTDeviceManager.angularClient/src/app/pages/devices/devices.component.html
+++ b/IoTDeviceManager.angularClient/src/app/pages/devices/devices.component.html
@@ -18,6 +18,7 @@
                     <th class="text-lg">Online status</th>
                     <th class="text-lg">Last connected</th>
                     <th class="text-lg">Sensor count</th>
+                    <th class="text-lg">Actions</th>
                 </tr>
             </ng-template>
             <ng-template #body let-device>
@@ -26,7 +27,16 @@
                     <td>{{ device.serialNumber }}</td>
                     <td><i [ngStyle]="{color: (device.isOnline) ? 'green' : 'red'}" class="pi pi-circle-on"></i></td>
                     <td>{{ device.lastConnectionTime | date:'medium' }}</td>
-                    <td>{{ device.sensors.length }}</td>
+                    <td>{{ device.sensors.length }}</td>        
+                    <td>
+                        <button
+                            class="p-button p-button-rounded p-button-success"
+                            [routerLink]="['/devices', device.serialNumber]"
+                            title="View Device Details">
+                            <i class="pi pi-eye"></i>
+                        </button>
+                    </td>
+            
                 </tr>
             </ng-template>
             <ng-template #footer>There are {{ devices ? devices.length : 0 }} devices in total.</ng-template>
