--- a/IoTDeviceManager.angularClient/src/app/pages/devices/devices.component.html
+++ b/IoTDeviceManager.angularClient/src/app/pages/devices/devices.component.html
@@ -1,10 +1,10 @@
 <div class="m-4">
-    <span class="text-3xl font-semibold">My devices</span>
+    <span class="text-[2em] font-semibold">My devices</span>
     <p-button class="ml-4 p-2 rounded-md" aria-label="Add a device"
         label="Add a device" (click)="createDeviceVisible = true" />
     
     <div class="mt-4">
-        <p-table [value]="devices" showGridlines [tableStyle]="{ 'min-width': '60rem' }">
+        <p-table *ngIf="!loading" [value]="devices" showGridlines [tableStyle]="{ 'min-width': '60rem' }">
             <ng-template #caption>
                 <div class="flex p-1 items-center justify-between">
                     <span class="text-xl font-semibold">Devices</span>
@@ -36,11 +36,12 @@
                             <i class="pi pi-eye"></i>
                         </button>
                     </td>
-            
                 </tr>
             </ng-template>
             <ng-template #footer>There are {{ devices ? devices.length : 0 }} devices in total.</ng-template>
         </p-table>
+
+        <p-progress-spinner *ngIf="loading" ariaLabel="loading"></p-progress-spinner>
     </div>
     
     <div class="z-1 bg-indigo-800">
